--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
+    background-color: $color-footer-navbar;
 } 
     .header {
         &__logo {
