--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,7 @@
-$color:rgb(20, 111, 0);
+/* colores */
+$color:white;
+$color-footer-navbar: #1c2331;
+
+/* tipo de letra */
+$letra-general: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
