--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
+/* colores */
+/* tipo de letra */
 .background-img, .galeria__grid .yo-claudio, .galeria__grid .patadita, .galeria__grid .cef, .galeria__grid .patada-roja {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat; }
 
 header {
-  background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%); }
+  background-color: #1c2331; }
 
 .header__logo {
   height: 70px;
@@ -44,13 +46,11 @@ header {
   font-size: 60px;
   text-align: center;
   padding: 20px 0;
-  margin: 30px;
-  border: solid 15px #04befe;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; }
   .main__futbol-portada {
     height: 95vh;
     width: 100%;
-    padding: 0px 0px 60px 0px; }
+    padding: 0px 0px 20px 0px; }
 
 .main {
   display: flex;
@@ -60,14 +60,16 @@ header {
     height: 250px;
     width: 250px;
     padding: 0 0 20px; }
+    .main__galeria:hover {
+      transform: scale(1.1, 1.1);
+      transition: all 1s; }
   .main__rojo {
-    padding: 0 0 100px 15px; }
+    padding: 0 0 15px 15px; }
   .main__somos {
     font-size: 50px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     text-align: center;
-    padding: 20px;
-    text-decoration: underline 10px; }
+    padding: 20px; }
   .main h2 {
     font-size: 30px;
     padding: 15px;
@@ -107,14 +109,27 @@ header {
 
 .main__categorias {
   font-size: 35px;
-  padding: 16px 0 0 16px; }
+  padding: 16px 0 0 16px;
+  text-align: center;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; }
   .main__categorias--texto {
-    padding: 0 0 100px 16px;
-    font-size: 25px; }
-  .main__categorias--listas {
-    padding: 0 0 100px 20px;
+    padding: 0 0 15px 16px;
     font-size: 25px;
-    list-style: none; }
+    text-align: center; }
+  .main__categorias--listas {
+    padding: 0 0 15px 20px;
+    font-size: 25px;
+    list-style: none;
+    text-align: center; }
+  .main__categorias--video {
+    width: 600px;
+    height: 300px;
+    padding-left: 15px;
+    padding-bottom: 15px; }
+  .main__categorias--editor {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
 
 .formulario {
   display: flex;
@@ -126,14 +141,15 @@ header {
     width: 400px;
     height: 400px; }
   .formulario .main__boton {
-    margin: 10px 0 15px;
+    margin: 10px 15px 15px;
     color: black;
     border-color: black;
-    border: 3px solid; }
+    border: 3px solid;
+    padding: 0 50px; }
     .formulario .main__boton:hover {
-      color: #146f00;
-      background-color: rgba(145, 255, 101, 0.701);
-      border: 6px solid;
+      color: white;
+      background-color: #1c2331;
+      border: 6px solid #1c2331;
       transform: scale(1, 1); }
   .formulario__imagen {
     display: flex;
@@ -142,7 +158,8 @@ header {
     padding-left: 100px; }
   .formulario__texto {
     text-align: center;
-    padding: 10px 0 10px; }
+    padding: 10px 0 10px;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; }
 
 .footer__logos {
   width: 50px;
@@ -181,9 +198,9 @@ body {
     align-items: center; }
   /* INDEX */
   .main__futbol-portada {
-    height: 100%;
+    height: 400px;
     width: 100%;
-    padding: 20px 0px 60px 0px;
+    padding: 20px 0px 20px 0px;
     display: flex;
     justify-content: center;
     align-items: center; }
@@ -207,23 +224,24 @@ body {
       height: 250px;
       width: 250px;
       padding: 0 0 20px; }
+    .main__rojo {
+      padding: 0px 10px 0px 10px; }
   /* GALERIA */
   .galeria__grid {
     display: grid;
-    width: 96vw;
-    height: 120vh;
+    width: 100%;
+    height: 100%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    row-gap: 15px;
-    padding: 20px 0 20px 10px; }
+    padding: 0px 10px 10px 10px; }
     .galeria__grid .patada-roja {
       grid-column: 1/2;
       grid-row: 1/2;
-      height: 50vh; }
+      height: 100%; }
     .galeria__grid .yo-claudio {
       grid-column: 1/2;
       grid-row: 2/3;
-      height: 50vh; }
+      height: 100%; }
     .galeria__grid .patadita {
       grid-column: 2/3;
       grid-row: 1/2;
@@ -234,15 +252,21 @@ body {
       height: 50vh; }
   /* FORMATO */
   .main__categorias {
-    font-size: 35px;
-    padding: 16px 0 0 16px; }
+    font-size: 35px; }
     .main__categorias--listas {
-      padding: 0 0 0 20px;
+      padding: 0px 10px 0px 10px;
       font-size: 25px;
       list-style: none; }
     .main__categorias--texto {
-      padding: 0 0 100px 16px;
+      padding: 0px 10px 0px 10px;
       font-size: 25px; }
+    .main__categorias--video {
+      width: 500px;
+      height: 300px;
+      padding: 0px 10px 10px 10px; }
+    .main__categorias--editor {
+      display: flex;
+      flex-direction: column; }
   /* CONTACTO */
   .formulario__imagen {
     display: none; }
@@ -262,8 +286,8 @@ body {
     align-items: center; }
   .header__logo {
     display: inline;
-    height: 80px;
-    width: 80px; }
+    height: 60px;
+    width: 60px; }
   .header__ala::after {
     display: none; }
   .header__nav {
@@ -298,13 +322,15 @@ body {
   .container {
     padding: 0px 0px; }
   /* INDEX */
-  .main__futbol-portada {
-    height: 100%;
-    width: 100%;
-    padding: 20px 0px 60px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
+  .main__futbol {
+    font-size: 35px; }
+    .main__futbol-portada {
+      height: 200px;
+      width: 310px;
+      padding: 10px 0px 10px 0px;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
   /* QUIENES SOMOS */
   .main {
     display: flex;
@@ -312,29 +338,43 @@ body {
     justify-content: space-around;
     align-items: center; }
     .main__galeria {
-      height: 250px;
-      width: 250px;
-      padding: 0 0 20px; }
+      height: 225px;
+      width: 225px;
+      padding: 0px 0px 20px; }
     .main__somos {
       font-size: 40px;
-      text-align: center;
-      text-decoration: underline 5px; }
+      text-align: center; }
+    .main__rojo {
+      padding: 0px 10px 10px 10px;
+      font-size: 25px; }
   /* FORMATO */
   .main__categorias {
     font-size: 35px;
     padding: 16px 0 0 16px; }
     .main__categorias--texto {
-      padding: 0 0 100px 16px;
-      font-size: 25px; }
+      padding: 0px 10px 15px 10px;
+      font-size: 25px;
+      font-style: italic; }
     .main__categorias--listas {
       padding: 0 0 0 20px;
       font-size: 25px;
-      list-style: none; }
+      list-style: none;
+      font-style: italic; }
+    .main__categorias--video {
+      width: 300px;
+      height: 200px;
+      padding: 0px 10px 10px 10px; }
+    .main__categorias--editor {
+      display: flex;
+      flex-direction: column; }
   /* CONTACTO */
   .formulario__imagen {
     display: none; }
   .formulario-3 {
     width: 70vw; }
+  .formulario .main__boton {
+    margin: 10px 15px 15px;
+    padding: 0 20px; }
   /* FOOTER */
   .footer__indice {
     display: flex;
