--- a/scss/_formato.scss
+++ b/scss/_formato.scss
@@ -3,15 +3,29 @@
 .main__categorias {
     font-size: 35px;
     padding: 16px 0 0 16px;
+    text-align: center;
+    font-family: $letra-general;
 
     &--texto {
-        padding: 0 0 100px 16px;
+        padding: 0 0 15px 16px;
         font-size: 25px;
+        text-align: center;
 }
     &--listas {
-        padding: 0 0 100px 20px;
+        padding: 0 0 15px 20px;
         font-size: 25px;
         list-style: none;
+        text-align: center;
 }
+    &--video {
+        width: 600px;
+        height: 300px;
+        padding-left: 15px;
+        padding-bottom: 15px;
+    }
+    &--editor {
+        display: flex;
+        @include flex(center, center);
+    }
 }
 
