--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,12 +3,11 @@
     font-size: 60px;
     text-align: center;
     padding: 20px 0;
-    margin: 30px;
-    border: solid 15px #04befe;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: $letra-general;
     &-portada {
         height: 95vh;
         width: 100%;
-        padding: 0px 0px 60px 0px;
-}
+        padding: 0px 0px 20px 0px;
+    }
+    
 }
