--- a/scss/_quienes-somos.scss
+++ b/scss/_quienes-somos.scss
@@ -7,16 +7,19 @@
         height: 250px;
         width: 250px;
         padding: 0 0 20px;
+        &:hover {
+            transform:scale(1.1, 1.1);
+            transition: all 1s;
+        }
 }
     &__rojo {
-        padding: 0 0 100px 15px;
+        padding: 0 0 15px 15px;
     }
     &__somos {
         font-size: 50px;
-        font-family:Arial, Helvetica, sans-serif;
+        font-family:$letra-general;
         text-align: center;
         padding: 20px;
-        text-decoration:underline 10px;
     }
 
     h2 {
