--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ body {
     font-size: 35px; }
     .main__futbol-portada {
       height: 200px;
-      width: 310px;
+      width: 100%;
       padding: 10px 0px 10px 0px;
       display: flex;
       justify-content: center;
@@ -356,7 +356,7 @@ body {
       font-size: 25px;
       font-style: italic; }
     .main__categorias--listas {
-      padding: 0 0 0 20px;
+      padding: 0 0 10px 20px;
       font-size: 25px;
       list-style: none;
       font-style: italic; }
